--- a/ponomarenko-numbers.prod.mshp-devops.com.conf
+++ b/ponomarenko-numbers.prod.mshp-devops.com.conf
@@ -1,6 +1,6 @@
 server{
     listen 80;
-    server_name common-numbers.prod.mshp-devops.com;
+    server_name ponomarenko-numbers.prod.mshp-devops.com;
 
     location / {
         root /var/www/ponomarenko_random_numbers;
