--- a/ponomarenko-numbers.prod.mshp-devops.com.conf
+++ b/ponomarenko-numbers.prod.mshp-devops.com.conf
@@ -4,7 +4,7 @@ server{
 
     location / {
         root /var/www/ponomarenko_random_numbers;
-        index index.html;
+        index /var/www/ponomarenko_random_numbers/index.html;
         try_files $uri =404;
     }
 }
