--- a/ponomarenko-numbers.prod.mshp-devops.com.conf
+++ b/ponomarenko-numbers.prod.mshp-devops.com.conf
@@ -3,8 +3,9 @@ server{
     server_name ponomarenko-numbers.prod.mshp-devops.com;
 
     location / {
-        root /var/www/ponomarenko_random_numbers;
-        index /var/www/ponomarenko_random_numbers/index.html;
+        root /var/www/ponomarenko_random_numbers/;
+        
+        index index.html;
         try_files $uri =404;
     }
 }
