--- a/ponomarenko-numbers.prod.mshp-devops.com.conf
+++ b/ponomarenko-numbers.prod.mshp-devops.com.conf
@@ -4,6 +4,6 @@ server{
 
     location / {
         root /var/www/ponomarenko_random_numbers/;
-        try_files $uri index.html;
+        try_files $uri /index.html;
     }
 }
