added backend section

--- a/ponomarenko-numbers.prod.mshp-devops.com.conf
+++ b/ponomarenko-numbers.prod.mshp-devops.com.conf
@@ -7,4 +7,10 @@ server{
 
         try_files $uri /index.html;
     }
+
+    location /api/ {
+        proxy_set_header Host $http_host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_pass http://127.0.0.1:9095/api/;
+    }
 }
